<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/glass"
                android:layout_gravity="right"
                android:background="@mipmap/magnifying_glass"
                android:layout_marginEnd="29dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/imageView"
                android:background="@mipmap/vf_title"
                android:layout_gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

        <include layout="@layout/banner"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@mipmap/xianshitehui"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            android:background="@mipmap/feilei">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageView1"
                android:layout_marginLeft="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:gravity="center">
            <TextView
                android:id="@+id/text1"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fushixiemao"
                android:textSize="13sp"/>
            <TextView
                android:id="@+id/text2"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meizhuanggehu"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/text3"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muyingwanju"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/text4"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jiajuriyon"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/text5"
                android:textSize="13sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diannaobangong"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dianshiyingyin"
                android:textSize="13sp"/>
            <TextView
                android:id="@+id/text7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhongbaoshoushi"
                android:textSize="13sp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/text8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tongxunchanpin"
                android:textSize="13sp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/text9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qicheyonpin"
                android:textSize="13sp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/text10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipinjiushui"
                android:textSize="13sp"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/imageView11"
                android:layout_marginLeft="10dp"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="60dp"
                android:layout_height="60dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:gravity="center">
            <TextView
                android:id="@+id/text11"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipinjiushui"
                android:textSize="13sp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/text12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xiangbaoshepin"
                android:textSize="13sp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/text13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jiangkangyiliao"
                android:textSize="13sp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/text14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wenhuayishu"
                android:textSize="13sp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/text15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jiazhuangjiancai"
                android:textSize="13sp"
                android:layout_marginLeft="8dp"/>
        </LinearLayout>
    </LinearLayout>
        <ImageView
            android:id="@+id/imageView_list"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"/>
        <ImageView
            android:id="@+id/imageView_list2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="fitXY"
            android:layout_marginTop="10dp"/>
    </LinearLayout>





</ScrollView>